@@ -3,6 +3,7 @@ spatialite (4.4.0~rc1-1~exp2) UNRELEASED; urgency=medium
   * Bump Standards-Version to 4.0.0, no changes.
   * Add autopkgtest to test installability.
   * Enable PIE hardening buildflags.
+  * Use pkg-info.mk variables instead of dpkg-parsechangelog output.
 
  -- Bas Couwenberg <sebastic@debian.org>  Mon, 26 Jun 2017 15:31:19 +0200
 
